lightbox amended, img colour on mobile no longer fades

--- a/assets/css/files/button.css
+++ b/assets/css/files/button.css
@@ -17,7 +17,6 @@
 }
 .btnLink{
     color: white;
-    height: 100%;
     width: 100%; 
     font-size: 1.4rem;
     padding: 5px;            
